
* options.h (DEFAULT_DRUMCHANNELS): do not mark 16 as a drum channel.

* read_midi_file(): added support for Microsoft RMID format.

* read_midi_file(): fixed parsing of certain MIDI files with extra
  data at the end of the tracks. (SDL_mixer bug:
  http://bugzilla.libsdl.org/show_bug.cgi?id=1299)

* read_config_file(): honor the return code from a recursive call.

* DLS instruments support: made it a config time option, disabled by
  default, because the code isn't good enough, neither is it used in
  unix installations where timidity is normally needed.

* DLS: a few changes from vavoom svn repository to fix loading of drums
  and somewhat improve the dls instruments use. still not good enough.

* renamed macro FSCALE to TIM_FSCALE to avoid possible clashes with
  system headers. renamed FSCALENEG to TIM_FSCALENEG for consistency.

* support for elf and macho symbol visibility attributes. support for
  windows dllexport/dllimport attributes.

* build: changed DEBUG to TIMIDITY_DEBUG for DEBUG_MSG. made to compile
  cleanly using newer gcc versions, as well as clang. made it to compile
  using C++ compilers.

------------------------------------------------------------------------

Changes by libtimidity-0.1.0:
-----------------------------

This version of TiMidity should contain all the fixes from the
November 15 2004 SDL_sound Subversion snapshot. In addition, I've made some
changes of my own, e.g.:

* Replacing SDL types and endian-handling with owns.

* File access to the config file and instruments is done through
  stdio functions. File access to MIDI files is done through abstract
  input stream. Implemented functions to create input stream from
  file name, from stdio file pointer, from memory, from callback functions.

* Renamed interface functions
  Timidity_Init            -> mid_init
  Timidity_Init_NoConfig   -> mid_init_no_config
  Timidity_SetVolume       -> mid_song_set_volume
  Timidity_PlaySome        -> mid_song_read_wave